force-app/main/default/objects/Post_Foster_Follow_Up__c/Post_Foster_Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Post-Foster Follow-Up</label>
    <nameField>
        <displayFormat>FUI-{00000}</displayFormat>
        <label>Follow-Up ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post-Foster Follow-Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>