force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Additional_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Support_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Support Needed</label>
    <type>Checkbox</type>
</CustomField>