force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Behavioral_Changes_Observed__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Changes_Observed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Behavioral Changes Observed?</label>
    <type>Checkbox</type>
</CustomField>