force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Caregiver_s_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_s_Feedback__c</fullName>
    <inlineHelpText>Comments from adoptive parents on how the child is adjusting.</inlineHelpText>
    <label>Caregiver&apos;s Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>