force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Caseworker_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Caseworker_s_Notes__c</fullName>
    <inlineHelpText>Caseworker’s observations and feedback</inlineHelpText>
    <label>Caseworker’s Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>