force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Challenges_Faced__c.field-meta.xml
<CustomField>
    <fullName>Challenges_Faced__c</fullName>
    <label>Challenges Faced</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emotional Adjustments</fullName>
            </value>
            <value>
                <fullName>Academic Performance</fullName>
            </value>
            <value>
                <fullName>Behavioural Issues</fullName>
            </value>
            <value>
                <fullName>Family Integration</fullName>
            </value>
            <value>
                <fullName>Financial Stress</fullName>
            </value>
            <value>
                <fullName>Legal Paperwork</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>