force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Child_s_Emotional_Well_Being_Score__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Emotional_Well_Being_Score__c</fullName>
    <label>Child’s Emotional Well-Being Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>