force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Child_s_Physical_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Physical_Health_Status__c</fullName>
    <label>Child’s Physical Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>