force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Education_Progress__c.field-meta.xml
<CustomField>
    <fullName>Education_Progress__c</fullName>
    <label>Education Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Not Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>