force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Follow_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Type__c</fullName>
    <label>Follow-Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Home Visit</fullName>
            </value>
            <value>
                <fullName>School Check-In</fullName>
            </value>
            <value>
                <fullName>Medical Check-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>