force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Next_Follow_Up_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Scheduled_Date__c</fullName>
    <label>Next Follow-Up Scheduled Date</label>
    <type>Date</type>
</CustomField>