force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Post-Foster Follow-Ups</relationshipLabel>
    <relationshipName>Post_Foster_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>