force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Referral_Details__c.field-meta.xml
<CustomField>
    <fullName>Referral_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Details</label>
    <referenceTo>Support_Service__c</referenceTo>
    <relationshipLabel>Post-Foster Follow-Ups</relationshipLabel>
    <relationshipName>Post_Foster_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>