force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Referral_to_Support_Services__c.field-meta.xml
<CustomField>
    <fullName>Referral_to_Support_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the family is referred to Support Services</inlineHelpText>
    <label>Referral to Support Services</label>
    <type>Checkbox</type>
</CustomField>