force-app/main/default/objects/Post_Foster_Follow_Up__c/fields/Social_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Social_Adjustment__c</fullName>
    <label>Social Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Well</fullName>
            </value>
            <value>
                <fullName>Well</fullName>
            </value>
            <value>
                <fullName>Some Difficulty</fullName>
            </value>
            <value>
                <fullName>Struggling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>